k8s/java-mysql-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-mysql-app-deployment
  labels:
    app: java-mysql-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-mysql-app
  template:
    metadata:
      labels:
        app: java-mysql-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: javamysqlapp
        image: mahtazare/test:java-mysql-project-1.2-SNAPSHOT
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-mysql-app-service
spec:
  selector:
    app: java-mysql-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
